@@ -1,3 +1,4 @@
+2nd tab: Moved the energy users left a bit to make room for expansion of the "Forms of Energy" panel when translated.
 2nd tab: Made the energy chunks that go through the fluorescent light bulb transition directly from electrical to light (no thermal phase).
 2nd tab: Made the thermal energy chunks spread out better on the filament in the incandescent light bulb.
 2nd tab: Made the beaker temperature go up more rapidly and get closer to the boiling point.
